tests/test_files_pa3/external/errors/WierdExpError3.ic
class A {
    D e;
}

class B extends A {}

class C extends B {}

class D {
    A c;
}

class E extends D {

     static void main(string[] args){}
     
     void wierdExp() {
         A a = new A();
         
         D d = (3+a).e;
        

     }
    
}